refactor(pathfinder): using appropriate java.util.List methods